Update AI routes to use GROQ API key correctly and preserve chat history functionality

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,4 +19,4 @@ RUN cd backend && npm install --production
 COPY . .
 
 # Start the application from root directory
-CMD ["node", "server.js"]
+CMD ["node", "src/server.js"]
