--- a/package.json
+++ b/package.json
@@ -11,14 +11,6 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --ext ts,tsx --fix",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest --watch",
-    "test:e2e": "cypress run",
-    "test:e2e:open": "cypress open",
-    "test:component": "cypress run --component",
     "type-check": "tsc --noEmit",
     "prepare": "",
     "deploy:docker": "docker-compose -f docker-compose.production.yml up --build -d",
@@ -27,7 +19,6 @@
     "backend:install": "cd chatbot && pip install -r requirements.txt",
     "backend:run": "cd chatbot && python app.py",
     "backend:setup": "cd chatbot && pip install -r requirements.txt && python -m spacy download en_core_web_sm",
-    "backend:test": "cd chatbot && python test_backend.py",
     "check-services": "node check-services.js",
     "check-docker": "node check-docker-services.js",
     "start:docker": "docker-compose up -d",
@@ -74,7 +65,7 @@
     "@vercel/node": "^5.5.12",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.11.0",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -95,6 +86,7 @@
     "next-themes": "^0.3.0",
     "node-cron": "^3.0.3",
     "postcss": "^8.4.47",
+    "query-string": "^9.3.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
@@ -125,30 +117,17 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.0.0",
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^5.0.5",
-    "@types/lodash": "^4.14.202",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/uuid": "^9.0.7",
-    "@vitest/coverage-v8": "^1.0.0",
-    "@vitest/ui": "^1.0.0",
-    "cypress": "^13.0.0",
-    "cypress-axe": "^1.5.0",
+    "@testing-library/jest-dom": "^6.9.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "husky": "^8.0.3",
-    "jsdom": "^23.0.0",
     "lint-staged": "^15.0.0",
     "lovable-tagger": "^1.1.8",
     "prettier": "^3.0.0",
     "terser": "^5.43.1",
     "typescript-eslint": "^8.0.0",
-    "vitest": "^1.0.0"
+    "vitest": "^4.0.15"
   }
 }
