--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,15 @@
   "name": "statsor-backend",
   "version": "1.0.0",
   "description": "Enhanced backend for Statsor football management platform",
-  "main": "server.js",
+  "main": "src/server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "build": "echo \"No build step needed for CommonJS\"",
-    "test": "jest",
     "lint": "eslint src/**/*.js",
-    "lint:fix": "eslint src/**/*.js --fix"
+    "lint:fix": "eslint src/**/*.js --fix",
+    "test:ai": "node test-ai-route.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.857.0",
@@ -30,6 +31,7 @@
     "express-slow-down": "^3.0.0",
     "express-validator": "^7.2.1",
     "geoip-lite": "^1.4.10",
+    "groq-sdk": "^0.3.3",
     "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
     "http-proxy-middleware": "^3.0.5",
@@ -47,6 +49,7 @@
     "paypal-rest-sdk": "^1.8.1",
     "pg": "^8.11.3",
     "prom-client": "^15.1.3",
+    "query-string": "^9.1.1",
     "resend": "^6.4.2",
     "sharp": "^0.32.6",
     "socket.io": "^4.7.4",
@@ -71,7 +74,6 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/uuid": "^10.0.0",
     "eslint": "^8.52.0",
-    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3"
