--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,25 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "lib": [
-      "ES2023"
-    ],
-    "module": "ESNext",
-    "skipLibCheck": true,
     "composite": true,
-    /* Bundler mode */
+    "skipLibCheck": true,
+    "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "isolatedModules": true,
-    "moduleDetection": "force",
+    "allowSyntheticDefaultImports": true,
     "noEmit": true,
-    /* Linting */
     "strict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "include": [
-    "vite.config.ts"
+    "backend/**/*",
+    "vite.config.ts",
+    "tailwind.config.ts"
   ]
 }
